# ColleyMatrix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ColleyTransform/: ColleyTransform.py
docs/: index.md
notebooks/: Example.ipynb  knn.ipynb  nba_2016_scores.csv  nba_2016_teams.csv
notebooks/.ipynb_checkpoints/: knn-checkpoint.ipynb
src/: CholeskySolver.cpp  CholeskySolver.h  Solver.cpp  TriangularSolver.h  types.h
